add: login logout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,24 @@
   </head>
 
   <body>
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        <span class="fs-4">Simple header</span>
+      </a>
+
+      <ul class="nav nav-pills">
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to 'Logout', logout_path, data: { turbo_method: :delete }, class: "nav-link" %>
+        <% else %>
+          <li class="nav-item"><%= link_to 'Login', login_path, class: "nav-link" %></li>
+        <% end %>
+      </ul>
+    </header>
+    <% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+    <% end -%>
     <div class="container m-5">
-      <% flash.each do |name, msg| -%>
-        <%= content_tag :div, msg, class: "alert alert-#{name}" %>
-      <% end -%>
       <%= yield %>
     </div>
   </body>
